2015-02-20  Deniz Yuret  <dyuret@ku.edu.tr>

	* TODO:

	- Cleanup hdf5 files.
	+ Make softloss, get rid of soft layer.
	- Add other losses
	+ make loss a training option.
	- Add sigmoid layer.
	+ Make b and yforw conditional?
	- Figure out if we have a gpu and if we are using a gpu, test code on no-gpu machine
	- Export functions
	- Make layer constructors that take size and generate random matrices
	- Make layer constructors that take arbitrary matrices, h5 files
	- Error checking in cuda.jl, pull request for InplaceOps
	- Cleanup kernel calls in kunet.cu
	- Have kernel softmax return loss?
	- Cleanup hdf5 format in kunet_h5.cu, get rid of xfunc, yfunc,
	+ make dropout a layer option.
	+ Make train call backprop

2015-02-19  Deniz Yuret  <dyuret@ku.edu.tr>

	* TODO:
	- Verify generic functions in cuda.jl
	- Try to make update.jl more readable
	+ HDF5 should store the name of the functions
	+ Find a good way to handle dropout during training and testing.
	x maybe xforms should be part of the trainer not the layer.
	x caffe has it as another layer
	x i have tried as a separate fn or as part of forw/back before.

	+ implement/test dropout
	- gpuseed not working, but random numbers start at the same place?
	+ cuda and julia not equal?
	x change dropout in cuda as well to use xmask for storage
	- change / check adagrad, nesterov options in cuda
	- implement/test maxnorm (cuda/matlab, no caffe test)

	- InplaceOps has deprecated
	- ArgParse has deprecated
	- CUBLAS does not import/extend blas!

2015-02-18  Deniz Yuret  <dyuret@ku.edu.tr>

	* DEBUG:
	- test_fw_cuda: 2.26s
	- test_fw_caffe: 3.82s
	- test_fw_matlab: 3.83s
	- test_fw_julia_cpu: 21.64s
	- test_fw_julia_gpu: 5.39s ??? (check ger vs badd; do test with direct ccalls)
	+ who is allocating 35MB?
	-- elapsed time: 5.395230859 seconds (35 MB allocated, 0.06% gc time in 1 pauses with 0 full sweep)

2015-02-17  Deniz Yuret  <dyuret@ku.edu.tr>

	* TODO:
	Possible design changes: